--- a/swapi.html
+++ b/swapi.html
@@ -2,10 +2,11 @@
 <html>
 <head>
   <title>Star Wars Characters</title>
+  <link rel="sylesheet" href="swapi.css">
 </head>
 <body>
   <h1>Star Wars Characters</h1>
-  <ul id="character-list"></ul>
+  <ul class="character-list" id="character-list"></ul>
 
   <script>
     // Function to fetch and display character data
