--- a/swapi.html
+++ b/swapi.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Star Wars Characters</title>
-  <link rel="sylesheet" href="swapi.css">
+  <link rel="stylesheet" href="swapi.css">
 </head>
 <body>
   <h1>Star Wars Characters</h1>
